# jact

./: CMakeLists.txt  README.md  setup.sh
lib/test/: test.cpp  test.h
src/: main.cpp
